# ems-platform

./: .env.example  .env~  .gitignore  Caddyfile.backup.1782113646  Makefile  README.md  cmi_read.py  devices.example.yaml  pyproject.toml
docs/: EMS_domenovy_katalog_v0.2.md  INFRA-FRANTA.md  architecture.md
docs/adr/: 0001-monitoring-first-control-ready.md  0002-canonical-model.md  0003-adapter-families.md  0004-module-registry.md  0004-solis-adapter.md  0005-control-pipeline.md  0005-module-edit-live-reconnect.md  0006-automation-spot.md  0006-hybrid-device-type.md  0007-dashboard-locality-picker.md  0007-passwords-email.md  0008-localities.md  0009-spot-discharge.md  0010-price-curve.md  0011-chart-axes-window.md  0012-quarter-hour-curve.md  0013-ewelink-cloud.md  0014-locality-aggregate.md  0015-chart-pan.md  0016-billing-period.md  0017-user-emails.md  0018-soc-contact.md  0019-cez-outages.md  0020-alerts-indicator.md  0021-dashboard-metric-chart.md  0022-onboarding-tour.md  0023-outage-email-notify.md  0024-outage-notify-schedule.md  0025-chart-hover-crosshair.md  0026-https-caddy.md  0027-ewelink-oauth.md  0028-charge-hysteresis-edit.md  0029-themes.md  0030-switch-outputs.md  0031-capacitor-mobile.md  0032-solis-control-layer.md  (+2 more)
ems/: __init__.py
infra/: Caddyfile  Caddyfile.bak  Caddyfile.bak.1781155436  Caddyfile~  Dockerfile  docker-compose.yml  nginx.conf
mobile/: README.md  capacitor.config.json  package.json
scripts/: deploy.sh  discover.py  setup-debian.sh
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
(+131 files in other folders)
