[project]
name = "ems-platform"
version = "0.44.1"
description = "Univerzální energy management napříč energetickým portfoliem"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
goodwe = ["goodwe>=0.4.8"]
solis = ["pymodbus>=3.13"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "asyncpg>=0.29", "pyjwt>=2.7", "bcrypt>=4.1", "httpx>=0.27", "aiosmtplib>=3.0"]
collector = ["asyncpg>=0.29"]
all = ["goodwe>=0.4.8", "pymodbus>=3.13", "fastapi>=0.110", "uvicorn[standard]>=0.29", "asyncpg>=0.29", "pyjwt>=2.7", "bcrypt>=4.1", "httpx>=0.27", "aiosmtplib>=3.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ems*"]
